added UA email to portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@
   text-align: center;
 }
 
+/*Contents
+1. Email Styles
+
+*/
+
+/*Email Styles */
+.email-container{
+  border: 1px solid #000001;
+  width: 550px;
+  height: 800px;
+}
