--- a/src/App.scss
+++ b/src/App.scss
@@ -74,7 +74,30 @@ body {
   -webkit-box-shadow: 0px 0px 10px var(--cs-light);
   box-shadow: 0px 0px 10px var(--cs-light);
 } 
+
+.loader {
+  border: 8px solid var(--cs-light-ac);
+  border-radius: 50%;
+  border-top: 8px solid var(--cs-primary);
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
  /*Site Wide End */
+
 /*Header */
 .main-header {
   background-image: url(https://i.imgur.com/0epctPq.png);
@@ -195,11 +218,39 @@ body {
 
 .contact-text {
   color: #17252A;
-  text-align: center;
   padding: 0 60px 0 60px;
   font-size: 1.3em;
 }
 
+#contact-form .form-control {
+  color: var(--cs-light);
+  background-color: var(--cs-dark);
+}
+
+#contact-form .form-control:focus{
+  color: var(--cs-light);
+  background-color: var(--cs-dark);
+  border: 2px solid var(--cs-light);
+  -webkit-box-shadow: 0px 0px 10px var(--cs-primary);
+  box-shadow: 0px 0px 10px var(--cs-primary);
+}
+
+#contact-form .btn-main:not(:disabled):not(:disabled):focus{
+  color: var(--cs-light);
+  background-color: var(--cs-dark);
+  border: 2px solid var(--cs-light);
+  -webkit-box-shadow: 0px 0px 10px var(--cs-primary);
+  box-shadow: 0px 0px 10px var(--cs-primary);
+
+ }
+
+ #contact-form .btn-main:not(:disabled):not(:disabled):active {
+  color: var(--cs-light);
+  background-color: var(--cs-dark);
+  border: 2px solid var(--cs-light);
+  -webkit-box-shadow: 0px 0px 10px var(--cs-light);
+  box-shadow: 0px 0px 10px var(--cs-light);
+} 
  /*Contact End */
 
 /*Email */
@@ -240,6 +291,12 @@ body {
     }
     /*Header End*/
 
+     /*Contact */
+  .contact-img  {
+    margin: 30px 0 0 0;
+  }
+   /*Contact End */
+
     /*Email */
     .email-container:focus {
       overflow: hidden;
@@ -255,6 +312,18 @@ body {
     padding: .7em 0 0 4em;
   }
   /*Header End*/
+
+  /*Homepage */
+  .profile-img img {
+    width: 100%;
+  }
+  /*Homepage End*/
+
+ /*Contact */
+  .contact-img img {
+    width: 100%;
+  }
+   /*Contact End */
 }
 
 @media only screen and (max-width: 576px) {
