website section icon update 02

--- a/src/App.scss
+++ b/src/App.scss
@@ -327,6 +327,7 @@ a:hover, a:hover {
     font-size: 5.7em;
     display: flex;
     justify-content: center;
+    overflow: hidden;
    }
 
    .tile-container.icon svg {
