website section icon 06

--- a/src/App.scss
+++ b/src/App.scss
@@ -569,10 +569,9 @@ border-radius: 0px;
     .tile-container.icon {
       align-items: center;
       font-size: 5.7em;
-      min-width: 20vw;
       display: flex;
       justify-content: center;
-      overflow: hidden;
+      padding: 0px;
      }
 
   /*Portfolio End*/
