--- a/src/App.scss
+++ b/src/App.scss
@@ -109,18 +109,61 @@ a:hover, a:hover {
  /*Site Wide End */
 
 /*Header */
-.main-header {
-  background-image: url(https://i.imgur.com/0epctPq.png);
-  background-repeat: no-repeat;
-  background-size: auto 150px;
-  height: 150px;
-}
+// .main-header {
+//   background-image: url(https://i.imgur.com/0epctPq.png);
+//   background-repeat: no-repeat;
+//   background-size: auto 150px;
+//   height: 150px;
+// }
 
 .main-header div {
+  text-align: center;
   font-size: 50px;
-  padding: .4em 0 0 3em;
+  padding: .4em 0 .4em 0;
   color: var(--cs-dark);
   font-weight: 700;
+}
+
+.main-header hr {
+  border: 0;
+  clear: both;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 80%;
+}
+
+/* -- Animated hr -- */
+
+.transition-hightlight {
+  // background: rgba(222, 242, 241, .1);
+  background: var(--cs-dark);
+  height: 1px;
+  overflow: hidden;
+  position: relative;
+}
+
+.transition-hightlight::before {
+  animation-duration: 6s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
+  animation-name: progress;
+  background: var(--cs-primary);
+  content: "";
+  display: block;
+  height: 2px;
+  position: absolute;
+  width: 80px;
+}
+
+@keyframes progress {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(4000px);
+  }
 }
 
 .navbar-green {
@@ -532,7 +575,6 @@ border-radius: 0px;
     /*Header */
   .main-header div {
     font-size: 32px;
-    padding: .7em 0 0 4em;
   }
   /*Header End*/
 
@@ -576,15 +618,9 @@ border-radius: 0px;
   /*Header */
   .main-header div {
     font-size: 26px;
-    padding: .5em 0 0 3.5em;
   }
   .main-header div span {
     display: none;
-  }
-
-  .main-header {
-    background-size: auto 100px;
-    height: 100px;
   }
   /*Header End*/
   
